test/functions/bradc/resolution/arrayVsFn.chpl
var A: [1..10] real;

proc A(i) {
  writeln("In function");
  return -1.0;
}

writeln("A[1] is: ", A[1]);

